--- a/frontend/app/views/directives/listEntries/postListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/postListEntryDirective.html
@@ -1,8 +1,14 @@
 <div class="uk-width-1-1">
   <div class="uk-flex">
+    <div ng-if="adminControls" class="uk-width-auto uk-margin-auto-vertical">
+      <button class="uk-button uk-button-default uk-border-rounded uk-margin-right restore-btn"
+              type="button" ng-click="recoverPost()"
+      >
+        {{'RESTORE' | translate}}
+      </button>
+    </div>
     <div class="uk-width-expand uk-margin-small-top uk-margin-small-bottom uk-text-truncate">
       <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical">
-
         <span ng-switch="post.postCategory.name">
             <span ng-switch-when="watchlist" class="iconify small-iconify" data-icon="bi:list-ol" data-inline="false"></span>
             <span ng-switch-when="critique" class="iconify small-iconify" data-icon="ic:outline-rate-review" data-inline="false"></span>
@@ -11,7 +17,11 @@
         </span>
 
         <span>{{post.postCategory.name}}</span>
-        <span ng-if="isAdmin(post.user)" class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
+        <span  ng-if="isAdmin(post.user)">
+          <span> - </span>
+           <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
+        </span>
+
         <span> {{post.user.enabled ? post.user.username : 'INVALID'}}</span>
 
         <span>{{'VOTES_DISPLAY' |translate:{votes:post.totalLikes};}}</span>
@@ -25,8 +35,8 @@
 
       <a class="text-lead" ng-href="/posts/{{post.id}}">
         <span ng-if="post.hasUserBookmarked">
-          <span class="iconify small-iconify" data-icon="mdi-bookmark-check" data-inline="false" title="{{'FOLLOW_TITLE' | translate}}"></span>
-          <span>-</span>
+          <span class="iconify small-iconify" data-icon="mdi-bookmark-check" data-inline="false" title="{{'BOOKMARKED_TITLE' | translate}}"></span>
+          <span> - </span>
         </span>
         <span>{{post.title}}</span>
       </a>
