--- a/frontend/app/views/directives/search/searchPostsDirective.html
+++ b/frontend/app/views/directives/search/searchPostsDirective.html
@@ -5,7 +5,7 @@
   </div>
   <div ng-show="posts.length > 0">
     <div ng-repeat="post in posts">
-      <post-list-entry-directive post="post"></post-list-entry-directive>
+      <post-list-entry-directive admin-controls="adminControls" remove-post-fn="removePost" post="post"></post-list-entry-directive>
     </div>
     <pagination-handler-directive
       pagination-params="paginationParams"
