--- a/frontend/app/views/directives/search/searchUsersDirective.html
+++ b/frontend/app/views/directives/search/searchUsersDirective.html
@@ -5,7 +5,7 @@
   </div>
   <div ng-show="users.length > 0">
     <div ng-repeat="user in users">
-      <user-list-entry-directive user="user"></user-list-entry-directive>
+      <user-list-entry-directive admin-controls="adminControls" remove-user-fn="removeUser" user="user"></user-list-entry-directive>
     </div>
     <pagination-handler-directive
       pagination-params="paginationParams"
