--- a/frontend/app/views/directives/fetch/fetchPostsDirective.html
+++ b/frontend/app/views/directives/fetch/fetchPostsDirective.html
@@ -4,7 +4,7 @@
   </div>
   <div ng-show="posts.length > 0">
     <div ng-repeat="post in posts">
-      <post-list-entry-directive post="post"></post-list-entry-directive>
+      <post-list-entry-directive admin-controls="false" post="post"></post-list-entry-directive>
     </div>
     <pagination-handler-directive pagination-params="paginationParams"
                                   reset-pagination-fn="resetPagination"
