--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -42,11 +42,14 @@
       </div>
 
 <!--    Hottest Users  -->
+      <div class="uk-width-1-3 uk-margin-large-left uk-padding uk-padding-remove-top">
+      <h2 class="uk-margin-small-top">{{'HOTTEST_USERS'|translate}}</h2>
         <div ng-show="users.length > 0">
           <div ng-repeat="user in users">
             <min-user-list-entry-directive user="user"></min-user-list-entry-directive>
           </div>
         </div>
+      </div>
 
     </div>
 
