Fixed visual bugs in homescreen and user display

--- a/frontend/app/views/directives/listEntries/postListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/postListEntryDirective.html
@@ -1,5 +1,5 @@
 <div class="uk-width-1-1">
-  <div class="uk-flex">
+  <div class="uk-grid-small" uk-grid>
     <div ng-if="adminControls" class="uk-width-auto uk-margin-auto-vertical">
       <button class="uk-button uk-button-default uk-border-rounded uk-margin-right restore-btn"
               type="button" ng-click="recoverPost()"
@@ -7,7 +7,7 @@
         {{'RESTORE' | translate}}
       </button>
     </div>
-    <div class="uk-width-expand uk-margin-small-top uk-margin-small-bottom uk-text-truncate">
+    <div class="uk-width-4-5 uk-margin-small-top uk-margin-small-bottom uk-text-truncate">
       <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical">
         <span ng-switch="post.postCategory.name">
             <span ng-switch-when="watchlist" class="iconify small-iconify" data-icon="bi:list-ol" data-inline="false"></span>
@@ -51,7 +51,7 @@
         </span>
       </p>
     </div>
-    <div class="uk-width-auto">
+    <div class="uk-width-1-6">
       <p class="uk-text-meta uk-text-right uk-margin-small-top uk-margin-remove-bottom uk-padding-small">
         <span>{{ getAgeMessage(post.creationDate) | translate }}</span>
       </p>
