--- a/frontend/app/views/directives/listEntries/userListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/userListEntryDirective.html
@@ -12,7 +12,7 @@
         <img class="image-user-display" ng-src="{{user.avatar}}" alt="">
       </a>
     </div>
-    <div class="uk-width-expand" ng-class="{'uk-padding-remove-left margin-user-display':!adminControls}">
+    <div class="uk-width-expand uk-margin-small-top uk-margin-small-bottom" ng-class="{'uk-padding-remove-left margin-user-display':!adminControls}">
       <div class="uk-flex">
         <div class="uk-width-expand">
           <a ng-href="{{user.url}}" class="text-lead" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle': isAdmin(user)}">
