--- a/frontend/app/views/home.html
+++ b/frontend/app/views/home.html
@@ -19,7 +19,7 @@
 <main class="uk-container uk-container-large main-page">
   <!--  Tabs  -->
 
-  <div class="uk-grid-small uk-flex uk-flex-wrap uk-flex-row uk-flex-center uk-margin-bottom uk-margin-top" uk-grid>
+  <div class="uk-grid-small uk-margin-top">
 
     <div class="uk-grid">
       <div class="uk-width-expand uk-margin-small-top">
