--- a/frontend/app/views/user/userProfile.html
+++ b/frontend/app/views/user/userProfile.html
@@ -1,6 +1,8 @@
 <div class="color-div">
   <div class="uk-height-medium uk-flex uk-flex-center uk-flex-middle uk-background-cover uk-light pink-div"></div>
 
+<!--  TODO: MODAL DE CONFIMARCIÓN DE USUARIO-->
+
   <div class="uk-width-1-3 image-profile-position">
     <div class="uk-transition-toggle" tabindex="0">
       <div class="image-profile-shape elevation-effect" uk-form-custom>
