reset password flow finished

--- a/frontend/app/views/user/resetPassword.html
+++ b/frontend/app/views/user/resetPassword.html
@@ -1,7 +1,7 @@
-<div class="uk-container uk-container-small uk-margin-auto uk-margin-medium-top">
+<div class="uk-container uk-container-xsmall uk-margin-auto uk-margin-medium-top">
   <div>
-    <h1 class="uk-margin-left uk-text-center">{{'USER_RESET_PASSWORD_HEADER' | translate}}</h1>
-    <p class="uk-margin-left uk-text-center uk-text-bold uk-text-italic">
+    <h1 class="uk-text-center">{{'USER_RESET_PASSWORD_HEADER' | translate}}</h1>
+    <p class="uk-text-center uk-text-bold uk-text-italic">
       {{'USER_RESETPASSWORD_VALIDATEDEMAIL' | translate}}
     </p>
   </div>
