Make some visual changes to profile and other places

--- a/frontend/app/styles/moovify/_extraStyle.scss
+++ b/frontend/app/styles/moovify/_extraStyle.scss
@@ -198,6 +198,11 @@ a.anchor {
   height: 18px;
 }
 
+.admin-badge-profile {
+  width: 26px;
+  height: 26px;
+}
+
 .admin-button {
   border: 1px solid #F3F3F3;
   color: #F3F3F3;
