--- a/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/minUserListEntryDirective.html
@@ -7,14 +7,18 @@
   <div class="uk-width-2-3 margin-user-home-display">
     <div class="uk-flex">
       <div class="uk-width-expand">
-        <a href="/user/{{user.id}}" ng-class="{'uk-text-primary': isAdmin, 'uk-text-middle': isAdmin}">
+        <a ng-href="{{user.url}}" ng-class="{'uk-text-secondary uk-text-bold uk-text-middle': isAdmin}">
+          <span ng-if="loggedUser.logged && user.userFollowing">
+            <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'FOLLOW_TITLE'| translate}}"></span>
+            <span>-</span>
+          </span>
           {{user.username}}
             <span ng-if="isAdmin">
                 <span>-</span>
-               <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{ADMIN_TITLE | translate}}"></span>
+               <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
             </span>
           <div ng-if="loggedUser.logged && user.userFollowed">
-            <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{ADMIN_TITLE | translate}}" ></span>
+            <span class="iconify small-iconify" data-icon="ri:user-follow-line" data-inline="false" title="{{'ADMIN_TITLE' | translate}}" ></span>
           </div>
         </a>
         <p class="uk-text-capitalize uk-text-meta uk-margin-remove-vertical">
