--- a/frontend/app/views/directives/listEntries/postListEntryDirective.html
+++ b/frontend/app/views/directives/listEntries/postListEntryDirective.html
@@ -22,7 +22,8 @@
            <span class="iconify admin-badge" data-icon="entypo:shield" data-inline="false" title="{{'ADMIN_TITLE' | translate}}"></span>
         </span>
 
-        <span> {{post.user.enabled ? post.user.username : 'INVALID'}}</span>
+        <span ng-if="post.user.enabled"> {{post.user.name}}</span>
+        <span ng-if="!post.user.enabled"> {{'OWNER_DELETED' | translate}}</span>
 
         <span>{{'VOTES_DISPLAY' |translate:{votes:post.totalLikes};}}</span>
 
