Confirmation email footer

--- a/frontend/app/styles/main.scss
+++ b/frontend/app/styles/main.scss
@@ -31,6 +31,7 @@
 @import "uikit/_tab.scss";
 @import "uikit/_text.scss";
 @import "uikit/_blank.scss";
+@import "uikit/_background.scss";
 
 @import 'uikit/src/scss/uikit.scss';
 
