--- a/frontend/app/styles/uikit/_variables.scss
+++ b/frontend/app/styles/uikit/_variables.scss
@@ -3,3 +3,5 @@ $moovify-primary-color-dark: #fa8a32;
 
 $moovify-secondary-color-light: #30475e;
 $moovify-secondary-color-dark: #222831;
+
+$moovify-disabled: #999;
